[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-instagram-publisher"
version = "0.1.0"
description = "AI-powered Instagram content generator and publisher"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.25.0",
    "apscheduler>=3.10.0",
    "python-telegram-bot>=20.0",
    "flask>=2.3.0",
]
authors = [
    {name = "AI Instagram Publisher", email = "example@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
include = ["generator*", "publisher*", "reviewer*", "utils*"]

[project.scripts]
ai-instagram-publisher = "main:main"
